k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api-deployment
  labels:
    app: hello-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
    spec:
      containers:
        - name: hello-api
          image: hello-api:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
