k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
spec:
  type: ClusterIP
  selector:
    app: hello-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
